ya hay mas cambios...
Aqui la parte del store ya esta por terminarse solo falta cambiar de
color los h2

--- a/html/our_projects/descargas.html
+++ b/html/our_projects/descargas.html
@@ -530,7 +530,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/wallpapers/VI_B-1-i-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/wallpapers/VI_B-1-i-thumb.jpg" class="opacity_0"  style="margin-left:-30px; margin-top:25px;" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -544,9 +544,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>LET'S GET HIGH with P.O.W. GIDEAS </h1>
 
-                                    <h2></h2>
+                                    <h2>Wallpaper HD 1920x1080 </h2>
 
                                 </div>                                                    
 
@@ -556,7 +556,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/wallpapers/VI_B-1-ii-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/wallpapers/VI_B-1-ii-thumb.jpg" class="opacity_0" style="margin-left:-30px; margin-top:25px;"   onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -570,9 +570,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>LET'S GET HIGH with P.O.W. GIDEAS  </h1>
 
-                                    <h2></h2>
+                                    <h2>Wallpaper HD 1920x1080  </h2>
 
                                 </div>                                                    
 
@@ -582,7 +582,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/wallpapers/VI_B-1-iii-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/wallpapers/VI_B-1-iii-thumb.jpg" class="opacity_0" style="margin-left:-30px; margin-top:25px;" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -596,9 +596,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                         <h1>LET'S GET HIGH with P.O.W. GIDEAS </h1>
 
-                                    <h2></h2>
+                                    <h2>Wallpaper HD 1920x1080 </h2>
 
                                 </div>                                                     
 
@@ -608,7 +608,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/wallpapers/VI_B-1-iv-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/wallpapers/VI_B-1-iv-thumb.jpg" class="opacity_0" style="margin-left:-30px; margin-top:25px;" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -622,9 +622,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                      <h1>P.O.W.</h1>
 
-                                    <h2></h2>
+                                    <h2>Launch Edition, 2012 </h2>
 
                                 </div>                                                                                 
 
@@ -634,7 +634,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/social/VI_C-1-ii-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/social/VI_C-1-ii-thumb2.jpg" class="opacity_0"  style="margin-left:-30px; margin-top:25px;" onload="animateThumb(this)" alt=""  />
 
                                    <div id="thumb-image-hover" class="hover-default">
 
@@ -648,9 +648,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>P.O.W. </h1>
 
-                                    <h2></h2>
+                                    <h2>Facebook Cover </h2>
 
                                 </div>                                                       
 
@@ -660,7 +660,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/social/VI_C-1-iii-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/social/VI_C-1-iii-thumb.jpg" style="margin-left:-30px; margin-top:25px;"  class="opacity_0" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -674,9 +674,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>P.O.W CITY </h1>
 
-                                    <h2></h2>
+                                    <h2>Facebook Cover </h2>
 
                                 </div>                                                      
 
@@ -686,7 +686,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/social/VI_C-3-i-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/social/VI_C-3-i-thumb2.jpg" class="opacity_" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -700,9 +700,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>P.O.W. </h1>
 
-                                    <h2></h2>
+                                    <h2>Twitter  Profile Pic</h2>
 
                                 </div>                                                 
 
@@ -712,7 +712,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/social/VI_C-3-ii-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/social/VI_C-3-ii-thumb2.jpg" class="opacity_" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -726,9 +726,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>P.O.W. </h1>
 
-                                    <h2></h2>
+                                    <h2>Facebook  Profile Pic</h2>
 
                                 </div>                                                       
 
@@ -738,7 +738,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/social/VI_D-1-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/social/VI_D-1-thumb.jpg" class="opacity_0" style="margin-left:10px; margin-top:0px;"  onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -752,10 +752,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>P.O.W. Special Edition, 2013 </h1>
 
-                                    <h2></h2>
-
+                                    <h2>Folder Icon </h2>
                                 </div>                                                       
 
                             </div>
@@ -764,7 +763,7 @@
 
                                 <div class="third-thumb-image">
 
-                                    <img src="assets/media/store/social/VI_D-2-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/store/social/VI_D-2-thumb2.jpg"  style="margin-left:20px; margin-top:0px;"  class="opacity_0" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -778,9 +777,9 @@
 
                                 <div class="thumb-tag">
 
-                                    <h1></h1>
+                                    <h1>P.O.W. Special Edition, 2013 </h1>
 
-                                    <h2></h2>
+                                    <h2>Folder Icon </h2>
 
                                 </div>                                                  
 
@@ -875,8 +874,10 @@
 
                                             <span>
                                                  <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1200px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#d02222;"><div class="columns-preview-media" data-src="assets/media/store/social/VI_D-1.png">
+                                                    	<img width="83%" class="opacity_00" onload="animateColPreviewMedia(this)" src="assets/media/store/social/VI_D-1.png" >
+                                                    </div>Gideas 1200px</a></br><br><br>
                                             </span>
 
                                            
@@ -894,9 +895,9 @@
                                             <p>Wallpapers</p>
 
                                            <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas 1200px</a></br><br><br>
                                             </span>
 
 
@@ -906,16 +907,16 @@
 
                                     <li>
 
-                                        <div class="columns-preview-media" data-src="assets/media/store/wallpapers/VI_B-2-iii.jpg"></div>
+                                        <div class="columns-preview-media" data-src="assets/media/store/wallpapers/VI_B-1-iii-thumb.jpg"></div>
 
                                         <div class="columns-preview-description">
 
                                             <p>Wallpapers</p>
 
                                             <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px;color:#FFFFFF;">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px;color:#d02222;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                         </div>
@@ -935,9 +936,9 @@
                                             <p>Social Network</p>
 
                                            <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                         </div>
@@ -953,7 +954,7 @@
                                             <p>Social Network</p>
 
                                             <span>
-                                                    <br><br><br><br><a href="assets/media/store/social/VI_C-1-ii.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Facebook</a>
+                                                    <br><br><br><br><a href="assets/media/store/social/VI_C-1-ii.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas Facebook</a>
 
 
                                             </span>
@@ -970,7 +971,7 @@
 
                                             <p>Social Network</p>
 
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-1-iii.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Facebook</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-1-iii.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas Facebook</a></span>
 
                                         </div>
 
@@ -984,7 +985,7 @@
 
                                             <p>Social Network </p>
 
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-i.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Twitter</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-i.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas Twitter</a></span>
 
                                         </div>
 
@@ -999,7 +1000,7 @@
                                             <p>Social Network</p>
 
                                           
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-ii.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Twitter</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-ii.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas Twitter</a></span>
 
                                         </div>
 
@@ -1013,7 +1014,7 @@
 
                                             <p>FOLDER ICONS</p>
 
-                                              <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-1.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Folder Icons</a></span>
+                                              <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-1.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas Folder Icons</a></span>
 
                                         </div>
 
@@ -1027,7 +1028,7 @@
 
                                             <p>FOLDER ICONS</p>
 
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Folder Icons</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-2.zip" style="text-decoration: none; font-size:18px; color:#d02222;">Gideas Folder Icons</a></span>
 
                                         </div>
 
