--- a/html/our_projects/productos.html
+++ b/html/our_projects/productos.html
@@ -521,7 +521,7 @@
 
                             	<div class="third-thumb-image">
 
-                                	<img src="assets/media/store/VI_A-1-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                	<img src="assets/media/store/VI_A-1-thumb4.jpg" class="opacity" onload="animateThumb(this)" style="margin-left:55px;" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -539,7 +539,7 @@
 
                                 	<h1>POW</h1>
 
-                                    <h2>Hablamos Face to Face</h2>
+                                    <h2>GIDEAS. 11th Anniversary Special Edition, 2013 </h2>
 
                                 </div>                  
 
@@ -549,7 +549,7 @@
 
                             	<div class="third-thumb-image">
 
-                                	<img src="assets/media/store/VI_A-2-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                	<img src="assets/media/store/VI_A-2-thumb2.jpg" class="opacity" onload="animateThumb(this)" style="margin-left:55px;" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -565,7 +565,7 @@
 
                                 	<h1>POW</h1>
 
-                                    <h2>Hablamos Face to Face</h2>
+                                    <h2>Launch Edition, 2012 </h2>
 
                                 </div>                                                  
 
@@ -575,7 +575,7 @@
 
                             	<div class="third-thumb-image">
 
-                                	<img src="assets/media/store/VI_A-3-thumb.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                	<img src="assets/media/store/VI_A-3-thumb2.jpg" class="opacity" onload="animateThumb(this)" style="margin-left:55px;" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -591,7 +591,7 @@
 
                                 	<h1>Sampling On/Offtrade</h1>
 
-                                    <h2>Hablamos Face to Face</h2>
+                                    <h2>Launch Edition, 2012 </h2>
 
                                 </div>                                                    
 
@@ -601,7 +601,7 @@
 
                             	<div class="third-thumb-image">
 
-                                	<img src="assets/media/store/VI_A-4-thum.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                	<img src="assets/media/store/VI_A-4-thum.jpg" class="" style="padding:20px 20px 20px; margin-left:-20px;" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -617,7 +617,7 @@
 
                                 	<h1>Marketing Interactivo</h1>
 
-                                    <h2>Hablamos Face to Face</h2>
+                                    <h2>Launch Edition, 2012 </h2>
 
                                 </div>                                                  
 
