--- a/html/about_us/about_us.html
+++ b/html/about_us/about_us.html
@@ -510,9 +510,9 @@
 
                         <div class="custom-separator"></div>
 
-                    	<div class="media-holder">
+                    	<div class="media-holder2">
 
-                        	<img src="assets/media/about_us/about_us/about_image.jpg" width="100%" class="opacity_0" onload="animateThumb(this)"/>
+                        	<img src="assets/media/about_us/about_us/about_image.jpg" width="80%" class="opacity" onload="animateThumb(this)"/>
 
                         </div>
 
