Ya estamos por terminar
Aquí ya estan acomodados

--- a/html/our_projects/microsoft1.html
+++ b/html/our_projects/microsoft1.html
@@ -716,9 +716,9 @@
 
                                         <div class="columns-preview-description">
 
-                                           <p style="color: #FFF; font-size:28px;">MICROSOFT</p>
+                                           <p style="color: #c42634; font-size:28px;">MICROSOFT</p>
 
-                                            <span style="color: #FFF; font-size:28px;">
+                                            <span style="color: #http://martin.local/gideas/#store/microsoft1.html; font-size:28px;">
                                             LANZAMIENTO WINDOWS 8 DEVELOPERS    <br><br><br></span><span style="color: #FFF; font-size:18px;">Innovar es aún más fácil con             Windows Re-Imaginado<br><br> 
 
                                             </span>
