--- a/html/our_projects/productos.html
+++ b/html/our_projects/productos.html
@@ -488,7 +488,7 @@
 
             <!--<div id="module-background-solid1" class="opacity_0"></div> -->    
 
-        	<img src="assets/backg/fondo-store.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
+        	<img src="assets/backg/fondo-store2.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
 
         </div>
 
@@ -563,7 +563,7 @@
 
                                 <div class="thumb-tag">
 
-                                	<h1>POW</h1>
+                                	<h1><strong>POW</strong></h1>
 
                                     <h2>Launch Edition, 2012 </h2>
 
@@ -589,7 +589,7 @@
 
                                 <div class="thumb-tag">
 
-                                	<h1>Sampling On/Offtrade</h1>
+                                	<h1><strong>Sampling On/Offtrade</strong></h1>
 
                                     <h2>Launch Edition, 2012 </h2>
 
@@ -615,7 +615,7 @@
 
                                 <div class="thumb-tag">
 
-                                	<h1>Marketing Interactivo</h1>
+                                	<h1><strong>Marketing Interactivo</strong></h1>
 
                                     <h2>Launch Edition, 2012 </h2>
 
